--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -24,7 +24,7 @@
       <p> Choose from <span class="span_class">50k &nbsp; Business </span></p>
       <form>
         <i class="fa-solid fa-suitcase-medical suitcase"></i>
-        <input class="input_box" placeholder=" What do you want to get ?" />
+        <input class="input_box" placeholder=" What do you want to get ?" id="dynamic_placeholder" data-ph ="What do you want to get ?" />
         <button class="find_button">Find Solution</button>
       </form>
     </div>
